# SmartPi

./: README.md  master.py  pyproject.toml  settings.ini
.github/workflows/: ci-testing.yml
mqtt_control/: mqtt_test.py  subscribe.py
plot/: live_plt.py
smartpi/: master.py
smartpi/mqtt_control/: publisher.py  subscribe.py
smartpi/plot/: live_plt.py
tests/: test_master.py  test_plot.py
