[tool.poetry]
name = "smartpi"
version = "0.1.0"
description = ""
authors = ["Lauenburg <leander.lauenburg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
paho-mqtt = "^1.5.1"
matplotlib = "^3.3.2"
pre-commit = "^2.7.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
master = "smartpi.master:subscribe_and_live_plot"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
